CMAKE_MINIMUM_REQUIRED(VERSION 3.16.0)
project(DatevKassenHelfer)

# we use c++ at least
SET(CMAKE_CXX_STANDARD 17) # Use C++ standard
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

# ADD_DEFINITIONS(-DUNICODE)
# ADD_DEFINITIONS(-D_UNICODE)
SET(CMAKE_EXTRA_CXX_FLAGS "${CMAKE_EXTRA_CXX_FLAGS} /nologo /wd4267 /wd4996 /wd4290 /wd4221 /wd4834 /wd4099 /DNDEBUG" CACHE STRING "Extra CXX options")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_EXTRA_CXX_FLAGS}")

ADD_EXECUTABLE(DatevKassenHelfer
	src/ezOptionParser.hpp
	src/DatevKassenHelfer.cpp
)
